package com.company.DesignPattern.Decorator.Interface;



// step1.= create the product interface

public interface Database {
    public  String  read();
    public  void  write(String str);
}
